fixed overflow issues

--- a/backend/SSRG/Jobs/static/polls/style.css
+++ b/backend/SSRG/Jobs/static/polls/style.css
@@ -220,6 +220,7 @@ align-items: center;
 .pendingContainer{
   visibility: hidden;
   height: 0px;
+  overflow: hidden;
 }
 
 .jobWrapperCard{
